--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ html, body{
 }
 body{
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  background-color: #fae19d;
+  background-color: black;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -16,6 +16,8 @@ body{
 h1{
   text-align: center;
   margin-bottom: 1em;
+  color: white;
+  float:top;
 }
 .container{
   height: 700px;
